Improved click correction & z-indexing

--- a/css/rooms.css
+++ b/css/rooms.css
@@ -71,7 +71,7 @@
 	background: url(../img/scenes/Hotel-desk-2x.png);
 	top: 140px;
 	left: 408px;
-	z-index: 200;	
+	z-index: 300;	
 }
 .room6 #crates {
 	width: 220px;
